# nePyc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_macos.yml  ci_unix.yml  ci_windows.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  nepyc.cli.rst  nepyc.client.cli.rst  nepyc.client.config.env.rst  nepyc.client.config.rst  nepyc.client.gui.assets.rst  nepyc.client.gui.rst  nepyc.client.gui.window_models.rst  nepyc.client.rst  nepyc.client.scripts.rst  nepyc.common.about.author.rst  nepyc.common.about.rst  nepyc.common.about.version.rst  nepyc.common.config.dirs.rst  nepyc.common.config.rst  nepyc.common.rst  nepyc.common.utils.rst  nepyc.log_engine.rst  nepyc.proto.ack.models.ok.rst  nepyc.proto.ack.models.reject.rst  nepyc.proto.ack.models.rst  nepyc.proto.ack.rst  nepyc.proto.rst  nepyc.rst  nepyc.server.cli.config.rst  nepyc.server.cli.rst  nepyc.server.protocol.rst  nepyc.server.rst  nepyc.server.utils.images.rst  nepyc.server.utils.rst
examples/: server_example.py
nepyc/: main.py
nepyc/cli/: arguments.py
nepyc/client/: __init__.py  about.py  client.py  config.py  log_engine.py  main.py
nepyc/client/cli/: arguments.py
nepyc/client/config/: __init__.py
nepyc/client/gui/: __init__.py
nepyc/client/gui/assets/: __init__.py  led_indicator.py  status_led.py
nepyc/client/gui/window_models/: __init__.py  send_to_server.py
nepyc/client/scripts/: __init__.py  send_to_nePyc.py
nepyc/common/about/: __init__.py
nepyc/common/about/author/: __init__.py  dev_team.py  software_org.py
nepyc/common/about/version/: __init__.py
nepyc/common/config/: __init__.py
nepyc/common/config/dirs/: __init__.py  defaults.py
nepyc/common/utils/: __init__.py  context_managers.py  decorators.py  ports.py
nepyc/log_engine/: __init__.py  helpers.py
nepyc/proto/: __init__.py  ack.proto  utils.py
nepyc/proto/ack/: __init__.py  dispatcher.py  receiver.py  registrar.py
nepyc/proto/ack/models/: __init__.py  base.py
nepyc/proto/ack/models/ok/: __init__.py  base.py
nepyc/proto/ack/models/reject/: __init__.py  base.py  duplicate.py  invalid.py
nepyc/proto/models/: __init__.py  ack.py
nepyc/server/: config.py  gui.py  main.py  server.py  signals.py
nepyc/server/cli/: __init__.py  arguments.py
nepyc/server/cli/config/: __init__.py
nepyc/server/protocol/: __init__.py  ack.py
nepyc/server/utils/: __init__.py  checksums.py  hashes.py  strings.py
nepyc/server/utils/images/: __init__.py
