[tool.poetry]
name = "nepyc"
version = "1.0.0-dev6"
description = "A Python application for image data streaming, processing, and dynamic slideshow display."
authors = ["Taylor B. <tayjaybabee@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nepyc-server = "nepyc.server.main:main"
nepyc-client = "nepyc.client.main:main"
nepyc = "nepyc.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
inspy-logger = ">=3.2.1"
pillow = "^11.0.0"
imagehash = "^4.3.1"
platformdirs = "^4.3.6"
pysimplegui = "^5.0.7"
inspyre-toolbox = {version = "1.6.0.dev17", source = "test-pypi"}

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
ipython = "^8.30.0"
prompt-toolkit = "^3.0.48"
ptipython = "^1.0.1"
python-call-graph = "^2.1.2"
viztracer = "^1.0.0"



[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.4.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-argparse = "^0.5.2"
sphinxcontrib-argdoc = "^0.1.3"
autoclasstoc = "^1.7.0"
sphinx-autodoc-annotation = "^1.0.post1"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
